Read, update, delete shop users

--- a/maizzle/src/layouts/main.html
+++ b/maizzle/src/layouts/main.html
@@ -1,10 +1,7 @@
-<!DOCTYPE {{{ page.doctype || 'html' }}}>
-<html
-	lang="{{ page.language || 'en' }}"
-	xmlns:v="urn:schemas-microsoft-com:vml"
->
+<!DOCTYPE html>
+<html lang="sv" xmlns:v="urn:schemas-microsoft-com:vml">
 	<head>
-		<meta charset="{{ page.charset || 'utf-8' }}" />
+		<meta charset="utf-8" />
 		<meta name="x-apple-disable-message-reformatting" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta
@@ -47,13 +44,13 @@
 		<stack name="head" />
 	</head>
 	<body
-		class="m-0 p-0 w-full [word-break:break-word] [-webkit-font-smoothing:antialiased] {{ page.bodyClass || '' }}"
+		class="m-0 p-0 w-full [word-break:break-word] [-webkit-font-smoothing:antialiased] bg-slate-50"
 	>
 		<div
 			role="article"
 			aria-roledescription="email"
 			aria-label="@{{ $title || '' }}"
-			lang="{{ page.language || 'en' }}"
+			lang="sv"
 		>
 			<table align="center">
 				<tr>
