--- a/maizzle/src/templates/shop-user-removed.html
+++ b/maizzle/src/templates/shop-user-removed.html
@@ -17,26 +17,17 @@
 								</h1>
 
 								<p class="m-0 leading-6">
-									@{{ $inviterName }} har bjudit in dig att
-									registrera ett konto på @{{
-									config('app.name') }}
+									Vi vill informera dig om att du har blivit
+									borttagen från @{{ $shopName }}.
 								</p>
-
-								<x-spacer height="24px" />
-
-								<x-button href="@{{ $registerUrl }}">
-									Registrera dig &rarr;
-								</x-button>
-
 								<x-divider
 									space-y="32px"
 									class="bg-slate-200"
 								/>
 
 								<p class="m-0">
-									Om du inte känner den som bjudit in dig
-									eller inte vet vad detta berör kan du bortse
-									från detta mejl.
+									Om du inte känner till vad detta berör kan
+									du bortse från detta mejl.
 									<br />
 									<br />
 									Vänligen, <br />@{{ config('app.name') }}
